--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Notepad</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Add</string>
     <string name="update">Update</string>
     <string name="title">Title</string>
+    <string name="addYourNote">Add your note here.</string>
+    <string name="myNotes">My Notes</string>
+    <string name="addNote">Add Note</string>
+    <string name="updateNote">Update Note</string>
 </resources>
